--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Agricfarm an Agriculture Category Bootstrap Responsive Template | Contact :: W3layouts</title>
+  <title>Tropitech | Contact</title>
   <!-- google fonts -->
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
   <!-- google fonts -->
@@ -24,7 +24,7 @@ Author URL: http://w3layouts.com
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
         <h1><a class="navbar-brand mr-lg-5" href="index.html">
-            Agric<span>farm</span>
+            Trop<span>itech</span>
           </a></h1>
         <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
@@ -55,9 +55,9 @@ Author URL: http://w3layouts.com
 
           </ul>
         </div>
-        <div class="d-lg-block d-none">
+        <!--<div class="d-lg-block d-none">
           <a href="contact.html" class="btn btn-style btn-secondary ml-lg-3">Free Quote</a>
-        </div>
+        </div>-->
         <!-- toggle switch for light and dark theme -->
         <div class="mobile-position">
           <nav class="navigation">
@@ -123,16 +123,15 @@ Author URL: http://w3layouts.com
                   <div class="col-lg-4 col-md-6">
                       <div class="contact-address">
                           <ul>
-                              <li class="icon-color"><span class="fa fa-map-marker"></span> <span>703 Homestead Street
-                                      <br>Waltham, MA 02453</span> </li>
+                              <li class="icon-color"><span class="fa fa-map-marker"></span> <span>8th Floor, Pinetree Plaza, Ngong Road<br>24834-00100, Nairobi, Kenya.</span> </li>
                           </ul>
                       </div>
                   </div>
                   <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                       <div class="contact-address">
                           <ul>
-                              <li class="icon-color"><span class="fa fa-phone"></span> <span><a class="" href="tel:+(21)-234-9999">Phone :+(21)-234-9999</a>
-                                 <a class="" href="tel:+(21)-234-8888">Fax :+(21)-234-8888</a></span></li>
+                              <li class="icon-color"><span class="fa fa-phone"></span> <span><a class="" href="tel:+(254)-7217-38650">Phone :+(254)-7217-38650</a>
+                                 <a class="" href="tel:+(254)-7263-81347">Mobile :+(254)-7263-81347</a></span></li>
                           </ul>
                       </div>
                   </div>
@@ -140,8 +139,8 @@ Author URL: http://w3layouts.com
                       <div class="contact-address">
                           <ul>
                               <li class="icon-color"><span class="fa fa-mail-reply"></span><span>
-                                  <a href="mailto:agricfarm@mail.com"> Agricfarm@mail.com</a>
-                                  <a href="mailto:info@agricfarm.com"> info@Agricfarm1.com</a>
+                                  <a href="mailto:sales@tropitch.com"> sales@tropitech.com</a>
+                                  <a href="mailto:info@tropitech.com"> info@tropitech.com</a>
                               </li>
                           </ul>
                       </div>
@@ -151,11 +150,11 @@ Author URL: http://w3layouts.com
       </div>
     </div>
   </div>
-    <div class="maphny">
+    <!--<div class="maphny">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2895687731!2d-74.26055986835598!3d40.697668402590374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1562582305883!5m2!1sen!2sin"
             frameborder="0" style="border:0" allowfullscreen=""></iframe>
-    </div>
+    </div>-->
 
 <!--//contact-->
  
@@ -166,8 +165,13 @@ Author URL: http://w3layouts.com
         <div class="row footer-top-29">
           <div class="footer-list-29 col-lg-4">
             <h6 class="footer-title-29">About Us</h6>
-            <p class="pr-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
-              voluptate rem ullam dolore nisi voluptatibus esse quasi.Integer sit amet mattis quam.</p>
+            <p class="pr-lg-5">Tropitech Kenya Limited is a dedicated provider of 
+              agricultural services, consulting and innovations, Environmental
+              sustainability services and Health and safety services. Our company
+               was founded with the goal of making a positive impact on the world by 
+               promoting sustainable agricultural practices while also helping other
+                sectors maintain the highest standards of health and safety compliance,
+                environmental responsibility, and food safety. </p>
             <div class="main-social-footer-29 mt-4">
               <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
               <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
@@ -183,7 +187,7 @@ Author URL: http://w3layouts.com
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="#"> Blog posts</a></li>
+              <!--<li><a href="#"> Blog posts</a></li>-->
               <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>
@@ -192,27 +196,28 @@ Author URL: http://w3layouts.com
               <h6 class="footer-title-29">Services</h6>
               <li>
                 <a href="#url">
-                  Healthy Milk
+                  AGRICULTURAL INPUT SUPPLY
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Organic Food
+                  AGRICULTURAL CONSULTANCY 
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Fresh Fruits
+                  LANDSCAPE DESIGN AND MANAGEMENT
+
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Tree Planting
+                  FOOD SAFETY AND QUALITY ASSURANCE
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Gardening
+                  ENVIRONMENTAL SUSTAINABILITY CONSULTANCY
                 </a>
               </li>
             </ul>
@@ -223,12 +228,11 @@ Author URL: http://w3layouts.com
             <h6 class="footer-title-29">Contact Us</h6>
             <ul>
               <li>
-                <p><span class="fa fa-map-marker"></span> Agricfarm, #49436 block, #888 Honey rd
-                  Newyork</p>
+                <p><span class="fa fa-map-marker"></span> 8th Floor, Pinetree Plaza, Ngong Road</p>
               </li>
-              <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-              <li><a href="mailto:Agricfarm@mail.com" class="mail"><span class="fa fa-envelope-open-o"></span>
-                  Agricfarm@mail.com</a></li>
+              <li><a href="tel:+254-726-381-347"><span class="fa fa-phone"></span> 0726381347/0721738650</a></li>
+              <li><a href="mailto:info@tropitech.com" class="mail"><span class="fa fa-envelope-open-o"></span>
+                info@tropitech.com</a></li>
             </ul>
           </div>
 
@@ -240,9 +244,9 @@ Author URL: http://w3layouts.com
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
       <div class="bottom-copies">
-        <p class="copy-footer-29 text-center">© 2020 Agricfarm. All rights reserved. Design by <a
-            href="https://w3layouts.com/" target="_blank">
-            W3Layouts</a></p>
+        <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
+            href="https://sirgetechnoprice.com/" target="_blank">
+            Technoprice Group</a></p>
       </div>
     </div>
 
