--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
+Author: Sirge Technoprice
+Author URL: http://sirgetechnoprice.com
 -->
 <!doctype html>
 <html lang="zxx">
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Agricfarm an Agriculture Category Bootstrap Responsive Template | Home :: W3layouts</title>
+  <title>Tropitech | Home</title>
   <!-- google fonts -->
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
   <!-- google fonts -->
@@ -24,7 +24,7 @@ Author URL: http://w3layouts.com
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
         <h1><a class="navbar-brand mr-lg-5" href="index.html">
-            Agric<span>farm</span>
+            Trop<span>itech</span>
           </a></h1>
         <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
@@ -56,10 +56,10 @@ Author URL: http://w3layouts.com
 
           </ul>
         </div>
-        <div class="d-lg-block d-none">
+        <!--<div class="d-lg-block d-none">
           <a href="contact.html" class="btn btn-style btn-secondary ml-lg-3">Free Quote</a>
         </div>
-        <!-- toggle switch for light and dark theme -->
+        <!- toggle switch for light and dark theme -->
         <div class="mobile-position">
           <nav class="navigation">
             <div class="theme-switch-wrapper">
@@ -89,7 +89,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
-                    <h5>Experience Them Real Agricultural</h5>
+                    <h5>FOOD SAFETY AND QUALITY ASSURANCE</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
                   </div>
                 </div>
@@ -97,11 +97,11 @@ Author URL: http://w3layouts.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Organic Fertilizers</a></h4>
+                  <h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4>
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Expert & Professional Farm</a></h4>
+                  <h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>
                 </div>
               </div>
             </div>
@@ -114,7 +114,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
-                    <h5>Healthy Food for Good Health</h5>
+                    <h5>AGRICULTURAL CONSULTANCY </h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
                   </div>
                 </div>
@@ -122,11 +122,11 @@ Author URL: http://w3layouts.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Agricultural Products</a></h4>
+                  <h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Fresh Dairy Products</a></h4>
+                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
-                    <h5>Healthy Milk for Good Health</h5>
+                    <h5>AGRICULTURAL INPUT SUPPLY</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
                   </div>
                 </div>
@@ -147,11 +147,11 @@ Author URL: http://w3layouts.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Organic Fertilizers</a></h4>
+                  <h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Expert & Professional Farm</a></h4>
+                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@ Author URL: http://w3layouts.com
                 <div class="container">
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
-                    <h5>Experience Them Real Agricultural</h5>
+                    <h5>ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
                   </div>
                 </div>
@@ -172,11 +172,11 @@ Author URL: http://w3layouts.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Organic Fertilizers</a></h4>
+                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">Expert & Professional Farm</a></h4>
+                  <h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>
                 </div>
               </div>
             </div>
@@ -193,11 +193,15 @@ Author URL: http://w3layouts.com
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
           <h6 class="sub-title">About Us</h6>
           <h3 class="hny-title">
-            A New Way To Invest In Agriculture</h3>
-          <p class="my-3 pr-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio
-            voluptatem
-            tenetur consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
-            voluptate rem ullam dolore nisi voluptatibus esse quasi.Integer sit amet mattis quam.</p>
+            Tropitech Kenya Limited </h3>
+          <p class="my-3 pr-lg-4">is a dedicated provider of agricultural services, 
+            consulting and innovations, Environmental sustainability services and 
+            Health and safety services. Our company was founded with the goal of 
+            making a positive impact on the world by promoting sustainable agricultural 
+            practices while also helping other sectors maintain the highest standards 
+            of health and safety compliance, environmental responsibility, and food safety.
+             We cover all food chains in agricultural sector, and also provide services in 
+             capacity building and compliance.</p>
           <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
@@ -219,16 +223,20 @@ Author URL: http://w3layouts.com
           <div class="cwp4-text col-lg-6">
             <h6 class="sub-title">what We Do</h6>
             <h3 class="hny-title">What We Offer for You</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.
-            </p>
+            <!--<p>Tropitech is a diverse, team-orientated company with a strong emphasis on
+               implementing innovative solutions for our clients in the following  
+            </p>-->
 
             <ul class="cont-4">
-              <li><span class="fa fa-check"></span> Weed Control</li>
-              <li><span class="fa fa-check"></span> Pest Control</li>
-              <li><span class="fa fa-check"></span> Grass Seeding</li>
-              <li><span class="fa fa-check"></span> Industry Oriented</li>
-              <li><span class="fa fa-check"></span> Fresh Milk products</li>
+              <li><span class="fa fa-check"></span> AGRICULTURAL INPUT SUPPLY</li>
+              <li><span class="fa fa-check"></span> AGRICULTURAL CONSULTANCY </li>
+              <li><span class="fa fa-check"></span> LANDSCAPE DESIGN AND MANAGEMENT</li>
+              <li><span class="fa fa-check"></span> FOOD SAFETY AND QUALITY ASSURANCE</li>
+              <li><span class="fa fa-check"></span> CHEMICAL ANALYSIS SERVICES</li>
+              <li><span class="fa fa-check"></span> MONITORING AND EVALUATION SERVICES</li>
+              <li><span class="fa fa-check"></span> ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</li>
+              <li><span class="fa fa-check"></span> OCCUPATIONAL SAFETY AND HEALTH SERVICES</li>
+              
 
             </ul>
           </div>
@@ -261,7 +269,7 @@ Author URL: http://w3layouts.com
     </div>
   </section>
   <!--//grids-->
-  <!--/grids2-->
+  <!--/grids2--
   <section class="w3l-how-grids-3 py-5" id="how">
     <div class="container py-md-5">
       <div class="w3l-header mb-md-5 mb-4">
@@ -299,7 +307,7 @@ Author URL: http://w3layouts.com
     </div>
   </section>
   <!--//grids2-->
-  <!-- stats -->
+  <!-- stats --
   <section class="w3l-stats py-5" id="stats">
     <div class="gallery-inner container py-lg-0 py-3">
       <div class="row stats-con pb-lg-3">
@@ -323,7 +331,7 @@ Author URL: http://w3layouts.com
     </div>
   </section>
   <!-- //stats -->
-  <!--/w3l-bottom-->
+  <!--/w3l-bottom--
   <section class="w3l-bottom py-5">
     <div class="container py-md-4 py-3 text-center">
       <div class="row my-lg-4 mt-4">
@@ -349,16 +357,16 @@ Author URL: http://w3layouts.com
     </div>
   </section>
   <!--//w3l-bottom-->
-  <!-- testimonials -->
+  <!-- testimonials --
   <section class="w3l-clients" id="clients">
-    <!-- /grids -->
+    <!-- /grids --
     <div class="cusrtomer-layout py-5">
       <div class="container py-lg-4 py-md-3 pb-lg-0">
         <div class="heading text-center mx-auto">
           <h6 class="sub-title text-center">Here’s what they have to say</h6>
           <h3 class="hny-title mb-md-5 mb-4">our clients do the talking</h3>
         </div>
-        <!-- /grids -->
+        <!--/grids --
         <div class="testimonial-width mt-5">
           <div id="owl-demo1" class="owl-two owl-carousel owl-theme">
             <div class="item">
@@ -486,8 +494,13 @@ Author URL: http://w3layouts.com
         <div class="row footer-top-29">
           <div class="footer-list-29 col-lg-4">
             <h6 class="footer-title-29">About Us</h6>
-            <p class="pr-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
-              voluptate rem ullam dolore nisi voluptatibus esse quasi.Integer sit amet mattis quam.</p>
+            <p class="pr-lg-5">Tropitech Kenya Limited is a dedicated provider of 
+              agricultural services, consulting and innovations, Environmental
+              sustainability services and Health and safety services. Our company
+               was founded with the goal of making a positive impact on the world by 
+               promoting sustainable agricultural practices while also helping other
+                sectors maintain the highest standards of health and safety compliance,
+                environmental responsibility, and food safety. </p>
             <div class="main-social-footer-29 mt-4">
               <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
               <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
@@ -503,7 +516,7 @@ Author URL: http://w3layouts.com
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="#"> Blog posts</a></li>
+              <!--<li><a href="#"> Blog posts</a></li>-->
               <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>
@@ -512,27 +525,28 @@ Author URL: http://w3layouts.com
               <h6 class="footer-title-29">Services</h6>
               <li>
                 <a href="#url">
-                  Healthy Milk
+                  AGRICULTURAL INPUT SUPPLY
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Organic Food
+                  AGRICULTURAL CONSULTANCY 
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Fresh Fruits
+                  LANDSCAPE DESIGN AND MANAGEMENT
+
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Tree Planting
+                  FOOD SAFETY AND QUALITY ASSURANCE
                 </a>
               </li>
               <li>
                 <a href="#url">
-                  Gardening
+                  ENVIRONMENTAL SUSTAINABILITY CONSULTANCY
                 </a>
               </li>
             </ul>
@@ -543,12 +557,11 @@ Author URL: http://w3layouts.com
             <h6 class="footer-title-29">Contact Us</h6>
             <ul>
               <li>
-                <p><span class="fa fa-map-marker"></span> Agricfarm, #49436 block, #888 Honey rd
-                  Newyork</p>
+                <p><span class="fa fa-map-marker"></span> 8th Floor, Pinetree Plaza, Ngong Road</p>
               </li>
-              <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-              <li><a href="mailto:Agricfarm@mail.com" class="mail"><span class="fa fa-envelope-open-o"></span>
-                  Agricfarm@mail.com</a></li>
+              <li><a href="tel:+254-726-381-347"><span class="fa fa-phone"></span> 0726381347/0721738650</a></li>
+              <li><a href="mailto:info@tropitech.com" class="mail"><span class="fa fa-envelope-open-o"></span>
+                info@tropitech.com</a></li>
             </ul>
           </div>
 
@@ -560,9 +573,9 @@ Author URL: http://w3layouts.com
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
       <div class="bottom-copies">
-        <p class="copy-footer-29 text-center">© 2020 Agricfarm. All rights reserved. Design by <a
-            href="https://w3layouts.com/" target="_blank">
-            W3Layouts</a></p>
+        <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
+            href="https://sirgetechnoprice.com/" target="_blank">
+            Technoprice Group</a></p>
       </div>
     </div>
 
