--- a/services.html
+++ b/services.html
@@ -184,20 +184,20 @@ We also provide training, support and supervise a team of quality assurance tech
               <p>Our team of experts will provide regular site visits, plant care and maintenance, pest management, and seasonal adjustments to irrigation and other systems to achieve the client needs.</p>
             </div>
           </div>
-          <div class="w3l-feature-6-gd">
+          <!--<div class="w3l-feature-6-gd">
             <div class="icon"><span class="fa fa-superpowers"></span></div>
             <div class="w3l-feature-6-gd-info">
               <h3><a href="#url">Rush Removal</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
           </div>
-          <div class="w3l-feature-6-gd">
+          <!<div class="w3l-feature-6-gd">
             <div class="icon"><span class="fa fa-flask"></span></div>
             <div class="w3l-feature-6-gd-info">
               <h3><a href="#url">Healthy Milk</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
-          </div>
+          </div>-->
         </div>
 
       </div>
