--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ Author URL: http://sirgetechnoprice.com
             <div class="slider-info banner-view bg bg2">
               <div class="banner-info">
                 <div class="container">
-                  <div class="banner-info-bg text-left">
+                  <!--<div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>FOOD SAFETY AND QUALITY ASSURANCE</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="banhny-w3grids">
