--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ Author URL: http://sirgetechnoprice.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4>
+                  <!--h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>
+                  <!--h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4-->
                 </div>
               </div>
             </div>
@@ -112,11 +112,11 @@ Author URL: http://sirgetechnoprice.com
             <div class="slider-info  banner-view banner-top1 bg bg2">
               <div class="banner-info">
                 <div class="container">
-                  <div class="banner-info-bg text-left">
+                  <!--<div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>AGRICULTURAL CONSULTANCY </h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="banhny-w3grids">
@@ -137,11 +137,11 @@ Author URL: http://sirgetechnoprice.com
             <div class="slider-info banner-view banner-top2 bg bg2">
               <div class="banner-info">
                 <div class="container">
-                  <div class="banner-info-bg text-left">
+                  <!--<div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>AGRICULTURAL INPUT SUPPLY</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="banhny-w3grids">
@@ -162,21 +162,21 @@ Author URL: http://sirgetechnoprice.com
             <div class="slider-info banner-view banner-top3 bg bg2">
               <div class="banner-info">
                 <div class="container">
-                  <div class="banner-info-bg text-left">
+                  <!--<div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</h5>
                     <a href="about.html" class="btn btn-white">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
+                  <!--h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>
+                  <!--h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4-->
                 </div>
               </div>
             </div>
