--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ Author URL: http://sirgetechnoprice.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
-                  <!--h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4-->
+                  <!--<h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
-                  <!--h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4-->
+                  <!--<h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>-->
                 </div>
               </div>
             </div>
@@ -122,11 +122,11 @@ Author URL: http://sirgetechnoprice.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>
+                  <!--<h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
+                  <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
               </div>
             </div>
@@ -147,11 +147,11 @@ Author URL: http://sirgetechnoprice.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>
+                  <!--<h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>>-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
-                  <h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>
+                  <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
               </div>
             </div>
@@ -172,11 +172,11 @@ Author URL: http://sirgetechnoprice.com
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
-                  <!--h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4-->
+                  <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
                   <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
-                  <!--h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4-->
+                  <!--<h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>-->
                 </div>
               </div>
             </div>
