--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ Author URL: http://sirgetechnoprice.com
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar1.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar2.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>-->
                 </div>
               </div>
@@ -121,11 +121,11 @@ Author URL: http://sirgetechnoprice.com
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar3.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">AGRICULTURAL INPUT SUPPLY</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar4.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
               </div>
@@ -146,11 +146,11 @@ Author URL: http://sirgetechnoprice.com
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner1.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar1.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>>-->
                 </div>
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner2.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar2.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
               </div>
@@ -171,11 +171,11 @@ Author URL: http://sirgetechnoprice.com
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner3.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar3.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">FOOD SAFETY AND QUALITY ASSURANCE</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/banner4.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar4.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</a></h4>-->
                 </div>
               </div>
