--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
+Author: Sirgetechnoprice
+Author URL: http://Sirgetechnoprice.com
 -->
 <!doctype html>
 <html lang="zxx">
