--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Author URL: http://sirgetechnoprice.com
               </div>
               <div class="banhny-w3grids">
                 <div class="banhny-w3grids-1">
-                  <img src="assets/images/bannar1.jpg" class="img-curve img-fluid" alt="" />
+                  <img src="assets/images/bannar5.jpg" class="img-curve img-fluid" alt="" />
                   <!--<h4><a href="#" class="hnys-title">AGRICULTURAL CONSULTANCY</a></h4>-->
                 </div>
                 <div class="banhny-w3grids-1">
@@ -192,7 +192,7 @@ Author URL: http://sirgetechnoprice.com
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
           <h6 class="sub-title">About Us</h6>
-          <h3 class="hny-title">
+          <!--<h3 class="hny-title">
             Tropitech Kenya Limited </h3>
           <p class="my-3 pr-lg-4">is a dedicated provider of agricultural services, 
             consulting and innovations, Environmental sustainability services and 
@@ -201,7 +201,7 @@ Author URL: http://sirgetechnoprice.com
             practices while also helping other sectors maintain the highest standards 
             of health and safety compliance, environmental responsibility, and food safety.
              We cover all food chains in agricultural sector, and also provide services in 
-             capacity building and compliance.</p>
+             capacity building and compliance.</p>-->
           <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
