--- a/index.html
+++ b/index.html
@@ -191,21 +191,22 @@ Author URL: http://sirgetechnoprice.com
     <div class="container py-md-5">
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
-          <h6 class="sub-title">About Us</h6>
-          <!--<h3 class="hny-title">
-            Tropitech Kenya Limited </h3>
-          <p class="my-3 pr-lg-4">is a dedicated provider of agricultural services, 
-            consulting and innovations, Environmental sustainability services and 
-            Health and safety services. Our company was founded with the goal of 
+          
+          <h6 class="sub-title">Our company was founded with the goal of 
             making a positive impact on the world by promoting sustainable agricultural 
             practices while also helping other sectors maintain the highest standards 
-            of health and safety compliance, environmental responsibility, and food safety.
-             We cover all food chains in agricultural sector, and also provide services in 
-             capacity building and compliance.</p>-->
-          <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
+            of health and safety compliance, environmental responsibility,</h6>
+          <img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />
+          
+           <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
           <img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />
+          <h6 class="sub-title">We work closely with our clients to develop customized solutions that meet their unique 
+            needs and help them achieve their goals. We also believe in building strong relationships with our clients
+            and working closely with them to achieve their goals... </h6>
+          <img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />
+          <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
 
       </div>
