--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Author URL: http://sirgetechnoprice.com
     </div>
   </section>
   <!--//grids-->
-  <!--/services-->
+  <!--/services--
   <section class="w3l-services1">
     <div id="content-with-photo4-block" class="py-5">
       <div class="container py-md-5">
@@ -225,7 +225,7 @@ Author URL: http://sirgetechnoprice.com
             <h3 class="hny-title">What We Offer for You</h3>
             <!--<p>Tropitech is a diverse, team-orientated company with a strong emphasis on
                implementing innovative solutions for our clients in the following  
-            </p>-->
+            </p>--
 
             <ul class="cont-4">
               <li><span class="fa fa-check"></span> AGRICULTURAL INPUT SUPPLY</li>
@@ -246,7 +246,7 @@ Author URL: http://sirgetechnoprice.com
     </div>
   </section>
   <!--//services-->
-  <!--/grids-->
+  <!--/grids--
   <section class="w3l-grids-3 py-5" id="flipbg">
     <div class="container py-md-5">
       <div class="w3flip-content">
