--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Author URL: http://sirgetechnoprice.com
             needs and help them achieve their goals. We also believe in building strong relationships with our clients
             and working closely with them to achieve their goals... </h6>
           <img src="assets/images/service.jpg" class="img-curve img-fluid" alt="" />
-          <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
+          <a href="service.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
 
       </div>
