--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Author URL: http://sirgetechnoprice.com
   </section>
   <!-- //testimonials -->
 
-  <!--/w3l-footer-29-main-->
+  <!--/w3l-footer-29-main--
   <section class="w3l-footer-29-main">
     <div class="footer-29 py-5">
       <div class="container py-lg-4">
@@ -519,8 +519,8 @@ Author URL: http://sirgetechnoprice.com
               <!--<li><a href="#"> Blog posts</a></li>-->
               <li><a href="contact.html">Contact us</a></li>
             </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
+          </div>-->
+          <!--<div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
             <ul>
               <h6 class="footer-title-29">Services</h6>
               <li>
@@ -552,8 +552,8 @@ Author URL: http://sirgetechnoprice.com
             </ul>
 
 
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1 mt-lg-0 mt-5">
+          </div>-->
+         <!-- <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1 mt-lg-0 mt-5">
             <h6 class="footer-title-29">Contact Us</h6>
             <ul>
               <li>
@@ -568,7 +568,7 @@ Author URL: http://sirgetechnoprice.com
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
@@ -576,6 +576,12 @@ Author URL: http://sirgetechnoprice.com
         <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
             href="https://sirgetechnoprice.com/" target="_blank">
             Technoprice Group</a></p>
+        <div class="main-social-footer-29 mt-4">
+              <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
+              <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+              <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
+              <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+            </div>
       </div>
     </div>
 
