--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ Author URL: http://sirgetechnoprice.com
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="services.html">Services</a></li>
-              <!--<li><a href="#"> Blog posts</a></li>-->
+              <!--<li><a href="#"> Blog posts</a></li>-
               <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>-->
@@ -576,12 +576,12 @@ Author URL: http://sirgetechnoprice.com
         <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
             href="https://sirgetechnoprice.com/" target="_blank">
             Technoprice Group</a></p>
-        <div class="main-social-footer-29 mt-4">
+        <!--<div class="main-social-footer-29 mt-4">-->
               <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
               <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
               <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
               <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-            </div>
+            <!--</div>-->
       </div>
     </div>
 
