--- a/index.html
+++ b/index.html
@@ -573,15 +573,16 @@ Author URL: http://sirgetechnoprice.com
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
       <div class="bottom-copies">
-        <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
-            href="https://sirgetechnoprice.com/" target="_blank">
-            Technoprice Group</a></p>
-        <!--<div class="main-social-footer-29 mt-4">-->
+            <div class="main-social-footer-29 mt-4">
               <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
               <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
               <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
               <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-            <!--</div>-->
+            </div>
+        <p class="copy-footer-29 text-right">© 2023 Tropitech. All rights reserved. Design by <a
+            href="https://sirgetechnoprice.com/" target="_blank">
+            Technoprice Group</a></p>
+    
       </div>
     </div>
 
