--- a/index.html
+++ b/index.html
@@ -578,11 +578,10 @@ Author URL: http://sirgetechnoprice.com
               <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
               <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
               <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-         
-        <p class="copy-footer-29 text-right">© 2023 Tropitech. All rights reserved. Design by <a
-            href="https://sirgetechnoprice.com/" target="_blank">
-            Technoprice Group</a></p>
+            <p class="copy-footer-29 text-right">© 2023 Tropitech. All rights reserved. Design by <a
+            href="https://sirgetechnoprice.com/" target="_blank"> Technoprice Group</a></p>
             </div>
+      </div>
     </div>
 
     <!-- move top -->
