--- a/index.html
+++ b/index.html
@@ -574,10 +574,10 @@ Author URL: http://sirgetechnoprice.com
     <div class="container">
       <div class="bottom-copies">
             <div class="main-social-footer-29 mt-4">
-              <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-              <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-              <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-              <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=100093271517659&sk=about" class="facebook"><span class="fa fa-facebook"></span></a>
+             <!-- <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+              <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>-->
+              <a href="https://www.linkedin.com/company/tropitech-limited/about/" class="linkedin"><span class="fa fa-linkedin"></span></a>
                 </div>
             <p class="copy-footer-29 text-right">© 2023 Tropitech. All rights reserved. Design by <a href="https://sirgetechnoprice.com/" target="_blank"> Technoprice Group</a></p>
           
