--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,10 @@ Author URL: http://Sirgetechnoprice.com
   </section>
   <!-- //about breadcrumb -->
    <!-- /contact-->
-  <div class="contact-form py-5" id="contact">
+   <div class="row mt-5">
+          <div class="col-md-6">
+            <img src="assets/images/banner3.jpg" class="img-fluid" alt="">
+             <div class="contact-form py-5" id="contact">
     <div class="container py-lg-5 py-md-4">
       <h3 class="hny-title mb-lg-5 mb-4">Get in touch</h3>
         <div class="contacts12-main mb-5">
@@ -117,7 +120,11 @@ Author URL: http://Sirgetechnoprice.com
             </form>
         </div>
             
-        <div class="row pt-lg-4">
+      
+  </div>
+          </div>
+          <div class="col-md-6 mt-md-0 mt-4">
+              <div class="row pt-lg-4">
           <div class="col-md-12">
               <div class="row">
                   <div class="col-lg-4 col-md-6">
@@ -149,7 +156,9 @@ Author URL: http://Sirgetechnoprice.com
           </div>
       </div>
     </div>
-  </div>
+            <img src="assets/images/banner2.jpg" class="img-fluid" alt="">
+          </div>
+ 
     <!--<div class="maphny">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2895687731!2d-74.26055986835598!3d40.697668402590374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1562582305883!5m2!1sen!2sin"
