--- a/contact.html
+++ b/contact.html
@@ -167,8 +167,8 @@ Author URL: http://Sirgetechnoprice.com
 
 <!--//contact-->
  
-  <!--/w3l-footer-29-main-->
-  <section class="w3l-footer-29-main">
+  <!--/w3l-footer-29-main--
+   <section class="w3l-footer-29-main">
     <div class="footer-29 py-5">
       <div class="container py-lg-4">
         <div class="row footer-top-29">
@@ -196,11 +196,11 @@ Author URL: http://Sirgetechnoprice.com
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="services.html">Services</a></li>
-              <!--<li><a href="#"> Blog posts</a></li>-->
+              <!--<li><a href="#"> Blog posts</a></li>
               <li><a href="contact.html">Contact us</a></li>
             </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
+          </div>-->
+          <!--<div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
             <ul>
               <h6 class="footer-title-29">Services</h6>
               <li>
@@ -232,8 +232,8 @@ Author URL: http://Sirgetechnoprice.com
             </ul>
 
 
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1 mt-lg-0 mt-5">
+          </div>-->
+         <!-- <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1 mt-lg-0 mt-5">
             <h6 class="footer-title-29">Contact Us</h6>
             <ul>
               <li>
@@ -248,14 +248,19 @@ Author URL: http://Sirgetechnoprice.com
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
       <div class="bottom-copies">
-        <p class="copy-footer-29 text-center">© 2023 Tropitech. All rights reserved. Design by <a
-            href="https://sirgetechnoprice.com/" target="_blank">
-            Technoprice Group</a></p>
+            <div class="main-social-footer-29 mt-4">
+              <a href="https://www.facebook.com/profile.php?id=100093271517659&sk=about" class="facebook"><span class="fa fa-facebook"></span></a>
+             <!-- <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+              <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>-->
+              <a href="https://www.linkedin.com/company/tropitech-limited/about/" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                </div>
+            <p class="copy-footer-29 text-right">© 2023 Tropitech. All rights reserved. Design by <a href="https://sirgetechnoprice.com/" target="_blank"> Technoprice Group</a></p>
+          
       </div>
     </div>
 
