--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,9 @@ Author URL: http://Sirgetechnoprice.com
                               <li class="icon-color"><span class="fa fa-map-marker"></span> <span>8th Floor, Pinetree Plaza, Ngong Road<br>24834-00100, Nairobi, Kenya.</span> </li>
                           </ul>
                       </div>
-                </div><br>
+                </div>
+            </div>
+                <div class="row">
                   <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                       <div class="contact-address">
                           <ul>
@@ -139,7 +141,9 @@ Author URL: http://Sirgetechnoprice.com
                                  <a class="" href="tel:+(254)-7263-81347">Mobile :+(254)-7263-81347</a></span></li>
                           </ul>
                       </div>
-                  </div><br>
+                  </div>
+                </div>
+                  <div class="row">
                   <div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
                       <div class="contact-address">
                           <ul>
@@ -156,6 +160,8 @@ Author URL: http://Sirgetechnoprice.com
     </div>
   </div>
   </div>
+  </div>
+  
  
     <!--<div class="maphny">
         <iframe
