--- a/about.html
+++ b/about.html
@@ -105,14 +105,14 @@ Author URL: http://Sirgetechnoprice.com
             </p>
            
         </div>
-        <div class="row mt-5">
+        <!--<div class="row mt-5">
           <div class="col-md-6">
             <img src="assets/images/banner3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-6 mt-md-0 mt-4">
             <img src="assets/images/banner2.jpg" class="img-fluid" alt="">
           </div>
-        </div>
+        </div>-->
       </div>
   </section>
   <!-- //about-6-->
