--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ Author URL: http://Sirgetechnoprice.com
   <section class="w3l-cta4 py-5">
       <div class="container py-lg-5">
         <div class="ab-section">
-          <h6 class="sub-title">About Us</h6>
+          <h6 class="sub-title">Know us More</h6>
           <h3 class="hny-title">Tropitech Kenya Limited</h3>
           <p class="py-3">We are a dedicated provider of agricultural services, consulting and innovations, Environmental sustainability services and Health and safety services. Our company
               was founded with the goal of making a positive impact on the world by promoting sustainable agricultural practices while also helping other sectors maintain the highest standards of health
