--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@ Author URL: http://Sirgetechnoprice.com
           <h6 class="sub-title">Know us More</h6>
           <h3 class="hny-title">Tropitech Kenya Limited</h3>
            </div>
-          <p class="py-3">We are a dedicated provider of agricultural services, consulting and innovations, Environmental sustainability services and Health 
+          <p>We are a dedicated provider of agricultural services, consulting and innovations, Environmental sustainability services and Health 
             and safety services. Our company was founded with the goal of making a positive impact on the world by promoting sustainable agricultural practices 
             while also helping other sectors maintain the highest standards of health and safety compliance, environmental responsibility, and food safety. We 
             cover all food chains in agricultural sector, and also provide services in capacity building and compliance. We work closely with our clients to 
