--- a/about.html
+++ b/about.html
@@ -129,21 +129,21 @@ Author URL: http://Sirgetechnoprice.com
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-4 bottom-ab-left">
           <div class="grdhny-info">
-            <img src="assets/images/g1.jpg" class="img-curve img-fluid" alt="" />
+            <img src="assets/images/mg1.jpg" class="img-curve img-fluid" alt="" />
             <h4><a href="#" class="hnys-title">Our Mission</a></h4>
             <p class="mt-2">To become a regional goods and service provider company of choice with quality as the main driver. We endeavor to build a win relationship with our clients.</p>
           </div>
         </div>
         <div class="col-lg-4 bottom-ab-right my-lg-0 my-5">
           <div class="grdhny-info">
-            <img src="assets/images/g2.jpg" class="img-curve img-fluid" alt="" />
+            <img src="assets/images/vg2.jpg" class="img-curve img-fluid" alt="" />
             <h4><a href="#" class="hnys-title">Our Vision</a></h4>
             <p class="mt-2">To partner with organizations, businesses and farmers to realize their full potential.</p>
           </div>
         </div>
         <div class="col-lg-4 bottom-ab-right">
           <div class="grdhny-info">
-            <img src="assets/images/g3.jpg" class="img-curve img-fluid" alt="" />
+            <img src="assets/images/cg3.jpg" class="img-curve img-fluid" alt="" />
             <h4><a href="#" class="hnys-title">Core Values</a></h4>
             <p class="mt-2">CORE VALUES- TROPitech<br> Trust Reliability Organization Proficiency</p>
           </div>
