--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ Author URL: http://sirgetechnoprice.com
     <div class="container py-md-5">
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
+          <h4><a href="#" class="hnys-title">About Us</a></h4>
            <img src="assets/images/abt3.jpg" class="img-curve img-fluid" alt="" />
           <h6 class="sub-title">Our company was founded with the goal of 
             making a positive impact on the world by promoting sustainable agricultural 
@@ -200,6 +201,7 @@ Author URL: http://sirgetechnoprice.com
           <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
+          <h4><a href="#" class="hnys-title">Our Services</a></h4>
           <!--<img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />-->
           <h6 class="sub-title">We work closely with our clients to develop customized solutions that meet their unique 
             needs and help them achieve their goals. We also believe in building strong relationships with our clients
