--- a/about.html
+++ b/about.html
@@ -206,6 +206,21 @@ Author URL: http://Sirgetechnoprice.com
         <div class="title-content text-center mb-lg-3 mb-4">
           <h6 class="sub-title">Hard Working People</h6>
           <h3 class="hny-title">Our Team</h3>
+          <p>Tropitech is a diverse, team-orientated company with a strong emphasis on implementing innovative solutions for our clients.
+            The team comprises of the following experts;<br>
+            <ul>
+                <li>•	Agriculture and crop protection specialists</li>
+                <li>•	Environmentalists</li></li>
+                <li>•	Horticulturalists</li>
+                <li>•	Health and safety practitioners</li>
+                <li>•	Engineers</li>
+                <li>•	Landscapers and Urban Planners</li>
+                <li>•	Food analysts</li>
+                <li>•	Chemical Analysts</li>
+                <li>•	Research consultants</li>
+          </ul>
+        <P>The team has undertaken work in East Africa and across the Sub - Saharan region, and hence have detailed knowledge of and expertise in these fields 
+          at a local and regional level.</P>
         </div>
         <!--<div class="row">
           <div class="col-lg-4 col-6 mt-lg-5 mt-4">
