--- a/about.html
+++ b/about.html
@@ -204,6 +204,7 @@ Author URL: http://Sirgetechnoprice.com
     <div class="team-block py-5">
       <div class="container py-lg-5">
         <div class="title-content text-center mb-lg-3 mb-4">
+          <div class="container py-md-5">
           <h6 class="sub-title">Hard Working People</h6>
           <h3 class="hny-title">Our Team</h3>
           <p>Tropitech is a diverse, team-orientated company with a strong emphasis on implementing innovative solutions for our clients.
@@ -221,6 +222,10 @@ Author URL: http://Sirgetechnoprice.com
           </ul>
         <P>The team has undertaken work in East Africa and across the Sub - Saharan region, and hence have detailed knowledge of and expertise in these fields 
           at a local and regional level.</P>
+        </div>
+<div class="container py-md-5">
+<img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
+</div>
         </div>
         <!--<div class="row">
           <div class="col-lg-4 col-6 mt-lg-5 mt-4">
