--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@ Author URL: http://Sirgetechnoprice.com
   <!-- team -->
   <section class="w3l-team" id="team">
     <div class="team-block py-5">
-      <div class="container py-lg-5">
+       <div class="col-lg-6 bottom-ab-left pr-lg-5">
         <div class="title-content text-center mb-lg-3 mb-4">
           <div class="container py-md-5">
           <h6 class="sub-title">Hard Working People</h6>
@@ -223,7 +223,7 @@ Author URL: http://Sirgetechnoprice.com
         <P>The team has undertaken work in East Africa and across the Sub - Saharan region, and hence have detailed knowledge of and expertise in these fields 
           at a local and regional level.</P>
         </div>
-<div class="container py-md-5">
+ <div class="col-lg-6 bottom-ab-right pr-lg-5">
 <img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
 </div>
         </div>
