--- a/about.html
+++ b/about.html
@@ -223,6 +223,7 @@ Author URL: http://Sirgetechnoprice.com
         <P>The team has undertaken work in East Africa and across the Sub - Saharan region, and hence have detailed knowledge of and expertise in these fields 
           at a local and regional level.</P>
         </div>
+      </div>
  <div class="col-lg-6 bottom-ab-right pr-lg-5">
 <img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
 </div>
