--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@ Author URL: http://Sirgetechnoprice.com
           at a local and regional level.</P>
         </div>
       </div>
-      
+      </div>
  <div class="col-lg-6 bottom-ab-right pr-lg-5">
    <div class="container py-md-5">
 <img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
