--- a/about.html
+++ b/about.html
@@ -233,9 +233,11 @@ Author URL: http://Sirgetechnoprice.com
     </div>
    </div>
   </div>
+</div>
+  </div>
+  </div>
       <div class="col-lg-6 bottom-ab-right pr-lg-5">
-   
-<img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
+   <img src="assets/images/stf.jpg" class="img-curve img-fluid" alt="" />
 </div>
      
   
