--- a/about.html
+++ b/about.html
@@ -205,6 +205,25 @@ Author URL: http://Sirgetechnoprice.com
       <div class="title-content text-center mb-lg-3 mb-4">
           <h6 class="sub-title">Hard Working People</h6>
           <h3 class="hny-title">Our Team</h3>
+        <div class="col-lg-6 bottom-ab-left pr-lg-5">
+          <h4><a href="#" class="hnys-title">About Us</a></h4>
+           <img src="assets/images/abt3.jpg" class="img-curve img-fluid" alt="" />
+          <h6 class="sub-title">Our company was founded with the goal of 
+            making a positive impact on the world by promoting sustainable agricultural 
+            practices while also helping other sectors maintain the highest standards 
+            of health and safety compliance, environmental responsibility,</h6>
+         
+          <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
+        </div>
+        <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
+          <h4><a href="#" class="hnys-title">Our Services</a></h4>
+          <!--<img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />-->
+          <h6 class="sub-title">We work closely with our clients to develop customized solutions that meet their unique 
+            needs and help them achieve their goals. We also believe in building strong relationships with our clients
+            and working closely with them to achieve their goals... </h6>
+          <img src="assets/images/service.jpg" class="img-curve img-fluid" alt="" />
+          <a href="service.html" class="btn btn-style btn-secondary mt-4">Read More</a>
+        </div>
        <div class="col-lg-6 bottom-ab-left pr-lg-5">
           <div class="container py-md-5">
             <p>Tropitech is a diverse, team-orientated company with a strong emphasis on implementing innovative solutions for our clients.
