--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ Author URL: http://sirgetechnoprice.com
             making a positive impact on the world by promoting sustainable agricultural 
             practices while also helping other sectors maintain the highest standards 
             of health and safety compliance, environmental responsibility,</h6>
+          <img src="assets/images/abt3.jpg" class="img-curve img-fluid" alt="" />
          
           <a href="about.html" class="btn btn-style btn-secondary mt-4">Read More</a>
         </div>
