--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Author URL: http://sirgetechnoprice.com
                 </div>
               </div>
             </div>
-          </li>-->
+          </li>
         </div>
         <div class="item">
            <li>
@@ -186,6 +186,7 @@ Author URL: http://sirgetechnoprice.com
     </div>
   </section>
   <!-- /main-slider -->
+  <p>Transforming Agribusiness and Landscapes: Expertise in Sustainability, Safety, and Growth</p>
   <!--/grids-->
   <section class="w3l-grids-3 py-5" id="about">
     <div class="container py-md-5">
