--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@ Author URL: http://w3layouts.com
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="services.html">Services</a>
