--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ Author URL: http://Sirgetechnoprice.com
   <section class="w3l-how-grids-3 py-5" id="how">
     <div class="container py-md-5">
       <div class="w3l-header mb-md-5 mb-4">
-        <h6 class="sub-title">Know us More</h6>
+        <h6 class="sub-title">/h6>
         <!--<h3 class="hny-title">We Provide
           High-Quality <br> Organic Products</h3>
         <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>-->
