--- a/about.html
+++ b/about.html
@@ -162,7 +162,8 @@ Author URL: http://Sirgetechnoprice.com
       <div class="row">
         <div class="col-lg-4 content-6-left">
           <h6 class="sub-title">Why Choose Us</h6>
-          <h3 class="hny-title">Trust<br>Reliability<br>Organization<br>Proficiency</h3>
+          <h3 class="hny-title">Trust-Our trust is earned through deeds.<br>Reliability- We are dependable to deliver as promised<br>
+            Organization-We are methodical and efficient in every operations we undertake<br>Proficiency-We have the knowledge, Skill and aptitude to deliver</h3>
         </div>
         <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
           <p class="mb-3">Trust-Our trust is earned through deeds.</p>
