--- a/about.html
+++ b/about.html
@@ -165,16 +165,16 @@ Author URL: http://Sirgetechnoprice.com
           <h3 class="hny-title">Trust-Our trust is earned through deeds.<br>Reliability- We are dependable to deliver as promised<br>
             Organization-We are methodical and efficient in every operations we undertake<br>Proficiency-We have the knowledge, Skill and aptitude to deliver</h3>
         </div>
-        <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
+          <!-- <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
           <p class="mb-3">Trust-Our trust is earned through deeds.</p>
             <p class="mb-3">Reliability- We are dependable to deliver as promised</p>
             
         </div>
-        <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
+     <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
           <p class="mb-3">Organization-We are methodical and efficient in every operations we undertake</p>
             <p class="mb-3">Proficiency-We have the knowledge, Skill and aptitude to deliver</p>
             
-        </div>
+        </div>-->
       </div>
     </div>
 </section>
