--- a/about.html
+++ b/about.html
@@ -161,20 +161,21 @@ Author URL: http://Sirgetechnoprice.com
     <div class="container py-lg-5">
       <div class="row">
         <div class="col-lg-4 content-6-left">
-          <h6 class="sub-title">Why Choose Us</h6>
+          <h6 class="sub-title">Core Values</h6>
+          <img src="assets/images/cg3.jpg" class="img-curve img-fluid" alt="" />
           <h3 class="hny-title">Trust-Our trust is earned through deeds.<br>Reliability- We are dependable to deliver as promised<br>
             Organization-We are methodical and efficient in every operations we undertake<br>Proficiency-We have the knowledge, Skill and aptitude to deliver</h3>
         </div>
-          <!-- <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
-          <p class="mb-3">Trust-Our trust is earned through deeds.</p>
-            <p class="mb-3">Reliability- We are dependable to deliver as promised</p>
+           <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
+             <h3 class="hny-title">Trust-</h3><p class="mb-3">Our trust is earned through deeds.</p>
+             <h3 class="hny-title">Reliability-</h3><p class="mb-3">We are dependable to deliver as promised</p>
             
         </div>
      <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
-          <p class="mb-3">Organization-We are methodical and efficient in every operations we undertake</p>
-            <p class="mb-3">Proficiency-We have the knowledge, Skill and aptitude to deliver</p>
+       <h3 class="hny-title">Organization-</h3>   <p class="mb-3">We are methodical and efficient in every operations we undertake</p>
+       <h3 class="hny-title"> Proficiency-</h3>  <p class="mb-3">We have the knowledge, Skill and aptitude to deliver</p>
             
-        </div>-->
+        </div>
       </div>
     </div>
 </section>
