--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@ Author URL: http://Sirgetechnoprice.com
           <h6 class="sub-title">Core Values</h6>
           <img src="assets/images/cg3.jpg" class="img-curve img-fluid" alt="" />
           <!--<h3 class="hny-title">Trust-Our trust is earned through deeds.<br>Reliability- We are dependable to deliver as promised<br>
-            Organization-We are methodical and efficient in every operations we undertake<br>Proficiency-We have the knowledge, Skill and aptitude to deliver</h3>--
+            Organization-We are methodical and efficient in every operations we undertake<br>Proficiency-We have the knowledge, Skill and aptitude to deliver</h3>-->
         </div>
            <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
              <h3 class="hny-title">Trust-</h3><p class="mb-3">Our trust is earned through deeds.</p>
