--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@ Author URL: http://Sirgetechnoprice.com
      <div class="col-lg-4 content-6-right mt-lg-0 mt-4">
        <h3 class="hny-title">Organization-</h3>   <p class="mb-3">We are methodical and efficient in every operations we undertake</p>
        <h3 class="hny-title"> Proficiency-</h3>  <p class="mb-3">We have the knowledge, Skill and aptitude to deliver</p>
-            
+            </div>
         </div>
       </div>
     </div>
