--- a/services.html
+++ b/services.html
@@ -55,9 +55,9 @@ Author URL: http://w3layouts.com
 
           </ul>
         </div>
-        <div class="d-lg-block d-none">
+        <!--<div class="d-lg-block d-none">
           <a href="contact.html" class="btn btn-style btn-secondary ml-lg-3">Free Quote</a>
-        </div>
+        </div>-->
         <!-- toggle switch for light and dark theme -->
         <div class="mobile-position">
           <nav class="navigation">
