--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ Author URL: http://Sirgetechnoprice.com
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
 
           </ul>
